socket and more stuff
